# unrealandychan_rekipedia

./: .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.sandbox  LICENSE  Makefile  README.md  README.zh-CN.md  README.zh-TW.md  RELEASE-NOTES.md  action.yml  close-wiki-agent-skill.md  coverage.json  index.html  package.json  pyproject.toml  pyproject.toml.bak.20260503112805  rekipedia-agent-skill.md
.github/scripts/: update-homebrew-tap.py
.github/workflows/: benchmark.yml  go-ci.yml  go-release.yml  npm-publish.yml  python-ci.yml  python-release.yml  rekipedia-wiki.yml  vscode-ci.yml  wiki-example.yml
.rekipedia/: REFACTOR.md  refactor_report.json  scan_meta.json
.rekipedia/diagrams/: class-hierarchy.md  module-graph.md
.rekipedia/exports/: manifest.json  relationships.json  symbols.json
.rekipedia/rag/: chunks.json  embed_meta.json
.rekipedia/wiki/: algorithms.md  architecture-data-flow.md  architecture-overview.md  architecture.md  ci-cd.md  cli-and-api.md  cli-command-line.md  cli-reference.md  configuration.md  contributing.md  core-modules.md  data-flow.md  data-models.md  data-structures.md  deployment.md  ecosystem-and-integrations.md  go-api.md  index.md  installation-and-setup.md  installation.md  integrations.md  module-analysis.md  module-cli.md  module-go-cli.md  module-llm.md  module-python-core.md  module-sandbox.md  module-storage.md  module-tests.md  performance.md  python-api.md  quick-start.md  refactor-analysis.md  release-process.md  repository-structure.md  sandbox-and-skills.md  scan-pipeline.md  search-and-ranking.md  technical-debt.md  testing.md
algo/: README.md  agentic-ask.md  bm25-symbol-search.md  graph-analysis.md  impact-analysis.md  incremental-update.md  rag-embedder.md  sharding.md  wiki-planner.md
benchmarks/: baselines.json  run_extraction.py
benchmarks/fixtures/python_web_app/: app.py
benchmarks/fixtures/typescript_react/: App.tsx
docs/: PLAN.md  customizing.md
docs/adr/: 0001-go-port-charter.md
docs/plans/: 2026-04-29-phase5-serve.md  2026-05-29-vscode-extension.md  2026-06-07-rekipedia-saas-architecture-plan.md  2026-06-13-p1-issues-229-230.md  2026-06-26-okf-integration.md  golang-rewrite.md
docs/wiki/: README.md  manifest.json
docs/wiki/diagrams/: class-hierarchy.md  module-graph.md
docs/wiki/wiki/: architecture.md  cli-and-api.md  core-modules.md  index.md  installation-and-setup.md  log.md  technical-debt.md  testing.md
go/: .goreleaser.yaml  Dockerfile  Makefile  README.md  RELEASE-NOTES.md  go.mod  go.sum  install.sh
go/cmd/close-wiki/: main.go
go/cmd/rekipedia/: main.go
go/internal/analysis/: refactor_detector.go  refactor_detector_test.go  refactor_enricher.go  refactor_enricher_test.go  refactor_types.go  refactor_writer.go  refactor_writer_test.go
go/internal/config/: agent.go  loader.go  loader_test.go
go/internal/exporter/: exporter_test.go  json_exporter.go  markdown_exporter.go
go/internal/extractor/: config.go  extractor.go  extractor_test.go  golang.go  python.go  typescript.go
go/internal/graph/: graph_analysis.go  graph_analysis_test.go  hub_gap_test.go
go/internal/llm/: client.go  client_test.go
go/internal/models/: contracts.go  contracts_test.go
go/internal/orchestrator/: helpers.go  orchestrator_test.go  run_ask.go  run_digest.go  run_update.go  sharding.go  snapshotter.go
go/internal/rag/: chunker.go  embedder.go  rag_test.go  scan_meta.go  vector_store.go
go/internal/server/: server.go  server_test.go
go/internal/storage/: aliases.go  store.go  store_test.go
go/internal/synthesis/: diagram_builder.go  page_builder.go  planner.go  synthesis_test.go
go/pkg/fsutil/: walk.go  walk_test.go
pipelines/: harness-canary.yaml  harness-ci.yaml  harness-feature-flag-gate.yaml
schemas/: analysis_result.schema.json
skills/harness/: observability.md  progressive-delivery.md  testability.md
skills/shared/: harness-rules.md.bak.20260503112805  observability-report-prompt.md  test-review-prompt.md.bak.20260503112805
src/close_wiki/: __init__.py  __main__.py
src/close_wiki/cli/: __init__.py  ask.py  embed.py  export.py  init.py  scan.py  serve.py  update.py
src/close_wiki/exporters/: __init__.py  json_export.py  markdown_export.py
src/close_wiki/extractors/: __init__.py  base.py  config_extractor.py  python_extractor.py  typescript_extractor.py
src/close_wiki/llm/: __init__.py  client.py
src/close_wiki/models/: __init__.py  contracts.py
src/close_wiki/orchestrator/: __init__.py  run_ask.py  run_digest.py  run_update.py  sharding.py  snapshotter.py
src/close_wiki/prompts/: ask_system.md  digest_system.md
src/close_wiki/rag/: embedder.py  scan_meta.py
src/close_wiki/sandbox/: __init__.py  runner.py
src/close_wiki/server/: app.py
src/close_wiki/storage/: __init__.py  sqlite_store.py
src/close_wiki/synthesis/: __init__.py  diagram_builder.py  (+2 more)
src/rekipedia/: __init__.py  __main__.py  api.py
tests/: test_action_yml.py  test_affected.py  test_agent_ask.py  test_agent_hints.py  test_api.py  test_ask.py  test_ask_brief.py  test_ask_coverage.py  test_ask_history_cli.py  test_benchmarks.py  test_biz_domain.py  test_bundle_export.py  test_chat_store.py  test_ci_scaffold.py  test_community_sharding.py  test_confidence.py  test_config_documents_default.py  test_config_loader.py  test_context_cmd.py  test_context_flag.py  test_conversation_memory.py  test_coverage_boost.py  test_cross_repo_search.py  test_diff_cmd.py  test_doc_type.py  test_document_chunks_store.py  test_document_extractor.py  test_document_thumbnail.py  test_domain.py  test_embedder.py  test_focus_flag.py  test_git_history.py  test_graph_analysis.py  test_graph_api.py  test_graph_api_edges.py  test_graph_communities.py  test_graph_diff.py  test_graph_export.py  test_graph_filter.py  test_homebrew_formula.py  (+73 more)
vscode-rekipedia/: .vscodeignore  README.md  esbuild.js  package.json  tsconfig.json
vscode-rekipedia/src/: extension.ts  reki.ts
web/: next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
(+195 files in other folders)
