[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rekipedia"
version = "0.24.0"
description = "AI-powered wiki generator for any codebase"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "rich>=13.0",
  "pyfiglet>=1.0",
  "pydantic>=2.0",
  "litellm>=1.30",
  "sqlite-utils>=3.35",
  "pathspec>=0.12",
  "markdown>=3.5",
  "jinja2>=3.1",
  "fastapi>=0.111",
  "python-multipart>=0.0.9",
  "uvicorn>=0.29",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "tree-sitter>=0.21",
  "tree-sitter-go",
  "tree-sitter-rust",
  "tree-sitter-java",
]

[project.optional-dependencies]
rag = [
  "faiss-cpu>=1.7",
  "numpy>=1.26",
]
qdrant = ["qdrant-client>=1.9"]
chroma = ["chromadb>=0.5"]
docs = [
  "liteparse>=0.1",
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "pytest-timeout>=2.3",
  "httpx>=0.27",
  "ruff>=0.4",
  "mypy>=1.10",
  "hatch>=1.12",
]

[project.scripts]
rekipedia = "rekipedia.cli:main"
reki = "rekipedia.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rekipedia"]

# ──────────────────────────────────────────────
#  Ruff — fast Python linter + formatter
#  Drop this file in your project root.
#  Run: ruff check . && ruff format .
# ──────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "app"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming  — enforces meaningful names
  "UP",   # pyupgrade
  "B",    # flake8-bugbear — opinionated correctness
  "C90",  # mccabe complexity
  "SIM",  # flake8-simplify — reduces nesting/complexity
  "ANN",  # type annotations
  "PTH",  # use pathlib instead of os.path
  "RUF",  # ruff-specific rules
]
ignore = [
  "ANN101",  # do not require self annotation
  "ANN102",  # do not require cls annotation
  "E501",    # line length handled by formatter
]

[tool.ruff.lint.mccabe]
# Flag functions with cyclomatic complexity > 10 (DDD aggregates and services should stay simple)
max-complexity = 10

[tool.ruff.lint.pep8-naming]
# Enforce domain-meaningful names: single-letter variables only in comprehensions
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ──────────────────────────────────────────────
#  Mypy — static type checking
#  Run: mypy src/
# ──────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
# Enforces explicit domain types instead of bare dicts/Any
disallow_any_explicit = false
no_implicit_optional = true
show_error_codes = true

# ──────────────────────────────────────────────
#  Bandit — security linting
#  Run: bandit -r src/ -c pyproject.toml
# ──────────────────────────────────────────────

[tool.bandit]
targets = ["src", "app"]
skips = []          # add "B101" to skip assert checks in test files if needed

[dependency-groups]
dev = [
    "faiss-cpu>=1.13.2",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "python-multipart>=0.0.27",
    "tree-sitter>=0.25.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-rust>=0.24.2",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
    "ignore:install \"ipywidgets\" for Jupyter support:UserWarning",
]
